update swagger and readme docs
